--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center">
             <div class="flex items-center">
-                <div class="text-3xl font-bold" style="color: var(--coffee-700);">Brew Haven</div>
+                <div class="text-3xl font-bold" style="color: var(--coffee-700);">Brew Havenn</div>
             </div>
             <div class="mt-4 md:mt-0 flex gap-8">
                 <a href="#home" style="color: var(--coffee-700);" class="hover:opacity-75 transition">Home</a>
